--- a/web_dev/templates/index.html
+++ b/web_dev/templates/index.html
@@ -41,8 +41,8 @@
             background-color: #0056b3;
         }
         .response {
-            text-align: center;
-            margin-top: 20px;
+            display: inline-block;
+            margin-left: 20px;
             font-size: 1.2em;
             color: #333;
         }
@@ -63,11 +63,31 @@
                 event.target.value = event.target.value.slice(0, 1);
             }
         }
+
+        function sendCommand(event) {
+            event.preventDefault(); // 阻止表单默认提交行为
+
+            const command = document.getElementById("command_input").value;
+            document.getElementById("command_input").value = "";  // 立即清除输入框内容
+
+            const xhr = new XMLHttpRequest();
+            xhr.open("POST", "/send_command", true);
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    const jsonResponse = JSON.parse(xhr.responseText);
+                    document.getElementById("current_command").innerText = jsonResponse.last_command;
+                    document.getElementById("response").innerText = "Arduino Response: " + jsonResponse.response;
+                }
+            };
+            xhr.send("command=" + command);
+        }
     </script>
 </head>
 <body>
     <div class="center-text">
         <p>Current Command Sent: <span id="current_command">{{ last_command if last_command else 'None' }}</span></p>
+        <span class="response" id="response"></span>
     </div>
     <div class="image-container">
         <img src="https://eumcm.com/file/e08b49a7ff39a9ddcfd1a.jpg" alt="Image Display">
@@ -75,14 +95,9 @@
     <div class="center-text">
         <p>Enter a command to send to Arduino:</p>
     </div>
-    <form action="/" method="post">
+    <form onsubmit="sendCommand(event)">
         <input type="text" id="command_input" name="command" autocomplete="off" autofocus oninput="limitInput(event)">
         <button type="submit">Send</button>
     </form>
-    {% if response %}
-        <div class="response">
-            <p>Arduino Response: {{ response }}</p>
-        </div>
-    {% endif %}
 </body>
 </html>
