add frp and modify speed in motor

--- a/web_dev/templates/index.html
+++ b/web_dev/templates/index.html
@@ -11,7 +11,7 @@
         <span class="response" id="response"></span>
     </div>
     <div class="image-container">
-        <img src="https://eumcm.com/file/e08b49a7ff39a9ddcfd1a.jpg" alt="Image Display">
+        <img src="http://172.25.96.195:5000/stream.mjpg" alt="Image Display">
     </div>
     <div class="center-text">
         <p>Enter a command to send to Arduino:</p>
@@ -20,6 +20,6 @@
         <input type="text" id="command_input" name="command" autocomplete="off" autofocus oninput="limitInput(event)">
         <button type="submit">Send</button>
     </form>
-</body>
 <script src="/static/script.js"></script>
+</body>
 </html>
