initially done 	modified:   web_dev/app.py 	new file:   web_dev/receive/receive_http.py 	modified:   web_dev/templates/index.html

--- a/web_dev/templates/index.html
+++ b/web_dev/templates/index.html
@@ -11,7 +11,7 @@
         <span class="response" id="response"></span>
     </div>
     <div class="image-container">
-        <img src="http://172.25.96.195:5000/stream.mjpg" alt="Image Display">
+        <img src="{{ info.stream_url }}" alt="Image Display">
     </div>
     <div class="center-text">
         <p>Enter a command to send to Arduino:</p>
