modified:   web_dev/app.py 	new file:   web_dev/receive_txt.py 	modified:   web_dev/send_pictures/send_http.py 	new file:   web_dev/send_pictures/send_txt.py 	modified:   web_dev/static/script.js 	modified:   web_dev/templates/index.html

--- a/web_dev/templates/index.html
+++ b/web_dev/templates/index.html
@@ -20,6 +20,7 @@
         <input type="text" id="command_input" name="command" autocomplete="off" autofocus oninput="limitInput(event)">
         <button type="submit">Send</button>
     </form>
+    <div id="records_container" class="records-container"></div>
 <script src="/static/script.js"></script>
 </body>
 </html>
