--- a/web_dev/templates/index.html
+++ b/web_dev/templates/index.html
@@ -11,7 +11,12 @@
         <span class="response" id="response"></span>
     </div>
     <div class="image-container">
-        <img src="{{ info.stream_url }}" alt="Image Display">
+        <div class="image-left">
+            <img src="{{ info.stream_url2 }}" alt="Image Display Left">
+        </div>
+        <div class="image-right">
+            <img src="{{ info.stream_url1 }}" alt="Image Display Right">
+        </div>
     </div>
     <div class="center-text">
         <p>Enter a command to send to Arduino:</p>
